* add JUCE and juicysfplugin submodules. * add JUCE cmake stuff

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,10 @@
 [submodule "zlib"]
 	path = lib/zlib
 	url = https://github.com/madler/zlib.git
+[submodule "external/JUCE"]
+    path = external/JUCE
+    url = https://github.com/juce-framework/JUCE.git
+[submodule "external/juicysfplugin"]
+    path = external/juicysfplugin
+    url = https://github.com/mikelow/juicysfplugin.git
+    branch = cmake
