* add JUCE and juicysfplugin submodules. * add JUCE cmake stuff

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,10 @@
 [submodule "lib/fmt"]
 	path = lib/fmt
 	url = https://github.com/fmtlib/fmt.git
+[submodule "external/JUCE"]
+    path = external/JUCE
+    url = https://github.com/juce-framework/JUCE.git
+[submodule "external/juicysfplugin"]
+    path = external/juicysfplugin
+    url = https://github.com/mikelow/juicysfplugin.git
+    branch = cmake
