* integrate NewSequencePlayer (to be renamed) into SequencePlayer. NewSequencePlayer handles actual midi/audio playback and SequencePlayer serves as the Qt middleware * add seek logic to NewSequencePlayer * add a callback to indicate when a SF2 was loaded by NewSequencePlayer, allowing playback immediately thereafter * go back to sending SF2 files to the VST via a single request. The multi-request transfer was a workaround for named pipes, which we are not using any more

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -47,10 +47,6 @@ add_executable(
   About.h
   IconBar.cpp
   IconBar.h
-  InstrClient.cpp
-  InstrClient.h
-  InstrServerMessage.cpp
-  InstrServerMessage.h
   Logger.cpp
   Logger.h
   MainWindow.cpp
@@ -59,8 +55,6 @@ add_executable(
   ManualCollectionDialog.h
   MenuBar.cpp
   MenuBar.h
-  NewSequencePlayer.cpp
-  NewSequencePlayer.h
   QtVGMRoot.cpp
   QtVGMRoot.h
   ReportDialog.cpp
@@ -122,7 +116,15 @@ add_executable(
   workarea/VGMFileView.cpp
   workarea/VGMFileView.h
   workarea/VGMFileListView.cpp
-  workarea/VGMFileListView.h)
+  workarea/VGMFileListView.h
+  playback/InstrClient.cpp
+  playback/InstrClient.h
+  playback/InstrServerMessage.cpp
+  playback/InstrServerMessage.h
+  playback/NewSequencePlayer.cpp
+  playback/NewSequencePlayer.h
+  playback/PendingCalls.cpp
+  playback/PendingCalls.h)
 
 if(APPLE)
   target_sources(vgmtrans PRIVATE util/Helpers_mac.mm)
