--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "win-deps"]
 	path = lib/vgmtrans-ext-win
-	url = https://github.com/vgmtrans/vgmtrans-ext-win
+	url = ../vgmtrans-ext-win
