--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,9 +6,9 @@ on:
   pull_request:
   workflow_dispatch:
 jobs:
-  macos_x64:
-    name: macOS (Intel)
-    runs-on: macos-12
+  x86_64-apple-darwin:
+    name: macOS 11.x+, Intel
+    runs-on: macos-13
     env:
       osx_min_ver: "11.0"
       osx_arch: "x86_64"
@@ -16,13 +16,17 @@ jobs:
       - uses: actions/checkout@v3
       - name: "Install dependencies"
         run: |
-          brew upgrade qt@5 ninja || brew install qt@5 ninja
+          brew install -f --overwrite python@3.12 llvm@17 qt@6 ninja
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
           echo "/usr/local/bin" >> $GITHUB_PATH
       - name: "Prepare build"
         run: |
+          export LDFLAGS="-L/usr/local/opt/llvm/lib"
+          export CPPFLAGS="-I/usr/local/opt/llvm/include"
           cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=${{ env.osx_min_ver }} \
                 -DCMAKE_OSX_ARCHITECTURES=${{ env.osx_arch }} \
+                -DCMAKE_C_COMPILER=/usr/local/opt/llvm/bin/clang \
+                -DCMAKE_CXX_COMPILER=/usr/local/opt/llvm/bin/clang++ \
                 -DCMAKE_BUILD_TYPE=Release \
                 -G Ninja \
                 -B build
@@ -30,15 +34,15 @@ jobs:
         run: cmake --build build --config "Release" --parallel
       - working-directory: "build"
         name: "Package DMG (macOS)"
-        run: /usr/local/opt/qt5/bin/macdeployqt bin/VGMTrans.app -dmg -always-overwrite
+        run: /usr/local/opt/qt6/bin/macdeployqt bin/VGMTrans.app -dmg -always-overwrite
       - name: "Upload artifact"
         uses: actions/upload-artifact@v3
         with:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ env.osx_arch }}-${{ runner.os }}.dmg
           path: "build/bin/VGMTrans.dmg"
-  Ubuntu:
+  x86_64-pc-linux-gnu:
     runs-on: ubuntu-20.04
-    name: Linux
+    name: Linux, x64
     steps:
       - uses: actions/checkout@v3
       - name: "Set environment variables"
@@ -48,15 +52,32 @@ jobs:
         run: |
           wget https://apt.llvm.org/llvm.sh
           chmod +x llvm.sh
-          sudo ./llvm.sh 16
+          sudo ./llvm.sh 17
+          sudo add-apt-repository ppa:okirby/qt6-backports
           sudo apt-get update && sudo apt-get upgrade -y
-          sudo apt-get install -y pkg-config clang-16 lld-16 ninja-build \
-            qtbase5-dev libqt5svg5-dev libqt5svg5 libqt5waylandclient5 libqt5waylandclient5-dev libqt5waylandcompositor5 libqt5waylandcompositor5-dev libgl1-mesa-dev \
+          sudo apt-get install -y pkg-config \
+            clang-17 lld-17 ninja-build \
+            qt6-base-dev libqt6svg6-dev libqt6svg6 \
+            qt6-tools-dev qt6-tools-dev-tools libgl1-mesa-dev \
             libjack-dev libsndfile1-dev libpulse-dev
+          echo 'export PATH="/usr/local/opt/llvm/bin:$PATH"' >> ~/.bash_profile
       - name: "Prepare build"
-        run: cmake -DCMAKE_C_COMPILER="clang-16" -DCMAKE_CXX_COMPILER="clang++-16" -DCMAKE_INSTALL_PREFIX=/usr -DCMAKE_BUILD_TYPE=Release -GNinja -B build
+        run: |
+          export LDFLAGS="-L/usr/local/opt/llvm/lib"
+          export CPPFLAGS="-I/usr/local/opt/llvm/include"
+          cmake \
+            -DCMAKE_C_COMPILER=clang-17 \
+            -DCMAKE_CXX_COMPILER=clang++-17 \
+            -DCMAKE_INSTALL_PREFIX=/usr \
+            -DCMAKE_BUILD_TYPE=Release \
+            -GNinja \
+            -B build
       - name: "Build project"
-        run: cmake --build build --config "Release" --parallel
+        run: |
+         cmake \
+          --build build \
+          --config "Release" \
+          --parallel
       - name: "Make AppImage"
         working-directory: "build"
         run: |
@@ -75,7 +96,8 @@ jobs:
           echo "Creating AppImage"
           ./linuxdeployqt-continuous-x86_64.AppImage appdir/usr/share/VGMTrans.desktop \
             -executable=appdir/usr/lib/libbass.so -executable=appdir/usr/lib/libbassmidi.so \
-            -appimage -extra-plugins=platforms/,wayland-shell-integration/,wayland-decoration-client/ \
+            -appimage -extra-plugins=platforms/,platformthemes/ \
+            -qmake=/usr/lib/qt6/bin/qmake6 \
             -verbose=10
           mv VGMTrans*.AppImage VGMTrans.AppImage
       - name: "Upload artifact"
@@ -83,9 +105,9 @@ jobs:
         with:
           name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-x86_64-${{ runner.os }}.AppImage
           path: "build/VGMTrans.AppImage"
-  Windows:
+  x86_64-pc-windows-msvc:
     runs-on: windows-2022
-    name: Windows
+    name: Windows, x64
     steps:
        - uses: actions/checkout@v3
          with:
