--- a/.gitmodules
+++ b/.gitmodules
@@ -10,10 +10,7 @@
 [submodule "zlib"]
 	path = lib/zlib
 	url = https://github.com/madler/zlib.git
-[submodule "external/JUCE"]
-	path = external/JUCE
-	url = https://github.com/juce-framework/JUCE.git
-[submodule "external/juicysfplugin"]
-	path = external/juicysfplugin
+[submodule "lib/juicysfplugin"]
+	path = lib/juicysfplugin
 	url = https://github.com/mikelow/juicysfplugin.git
-    branch = cmake
+	branch = cmake
