* update juicysfplugin and use juicysfplugin_network lib instead of locally defining classes to interface with VST over network * rename SequencePlayer -> PlayerService * rename NewSequencePlayer -> VSTSequencePlayer

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -59,9 +59,11 @@ add_executable(
   QtVGMRoot.h
   ReportDialog.cpp
   ReportDialog.h
-  SequencePlayer.cpp
-  SequencePlayer.h
   main_ui.cpp
+  services/playerservice/PlayerService.cpp
+  services/playerservice/PlayerService.h
+  services/playerservice/VSTSequencePlayer.cpp
+  services/playerservice/VSTSequencePlayer.h
   services/MenuManager.cpp
   services/MenuManager.h
   services/Settings.cpp
@@ -117,14 +119,7 @@ add_executable(
   workarea/VGMFileView.h
   workarea/VGMFileListView.cpp
   workarea/VGMFileListView.h
-  playback/InstrClient.cpp
-  playback/InstrClient.h
-  playback/InstrServerMessage.cpp
-  playback/InstrServerMessage.h
-  playback/NewSequencePlayer.cpp
-  playback/NewSequencePlayer.h
-  playback/PendingCalls.cpp
-  playback/PendingCalls.h)
+)
 
 add_dependencies(vgmtrans juicysfplugin_VST3)
 
@@ -157,7 +152,8 @@ target_link_libraries(
           Qt6::GuiPrivate
           Qt6::Svg
           juce::juce_audio_utils
-          juce::juce_audio_processors)
+          juce::juce_audio_processors
+          juicysfplugin_network)
 
 qt_add_shaders(
   vgmtrans
