wip to be overwritten

--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 	path = lib/juicysfplugin
 	url = https://github.com/mikelow/juicysfplugin.git
 	branch = cmake
+	[submodule "lib/ymmy"]
+    	path = lib/ymmy
+    	url = https://github.com/mikelow/ymmy.git
