for AppImage builds, copy LICENSE into appdir/usr/share/licenses/VGMTrans/LICENSE

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -102,6 +102,8 @@ jobs:
             -appimage -extra-plugins=platforms/,platformthemes/ \
             -qmake=/usr/lib/qt6/bin/qmake6 \
             -verbose=10
+          mkdir -p appdir/usr/share/licenses/VGMTrans
+          cp ../LICENSE/LICENSE appdir/usr/share/licenses/VGMTrans/
           mv VGMTrans*.AppImage VGMTrans.AppImage
       - name: "Upload artifact"
         uses: actions/upload-artifact@v3
