ci: add macos arm64 target

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,12 +6,14 @@ on:
   pull_request:
   workflow_dispatch:
 jobs:
-  x86_64-apple-darwin:
-    name: macOS 11.x+, Intel
-    runs-on: macos-13
+  macos:
+    name: macOS 11.x+
+    runs-on: ${{ (matrix.target == 'x86_64' && 'macos-13') || 'macos-14' }}
+    strategy:
+      matrix:
+        target: [ "x86_64", "arm64" ]
     env:
       osx_min_ver: "11.0"
-      osx_arch: "x86_64"
     steps:
       - uses: actions/checkout@v3
       - name: "Install dependencies"
@@ -22,7 +24,7 @@ jobs:
       - name: "Prepare build"
         run: |
           cmake -DCMAKE_OSX_DEPLOYMENT_TARGET=${{ env.osx_min_ver }} \
-                -DCMAKE_OSX_ARCHITECTURES=${{ env.osx_arch }} \
+                -DCMAKE_OSX_ARCHITECTURES=${{ matrix.target }} \
                 -B build
       - name: "Build project"
         run: cmake --build build --config "Release" --parallel
@@ -35,7 +37,7 @@ jobs:
       - name: "Upload artifact"
         uses: actions/upload-artifact@v3
         with:
-          name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ env.osx_arch }}-${{ runner.os }}.dmg
+          name: VGMTrans-${{ github.sha }}-${{ env.BRANCH }}-${{ matrix.target }}-${{ runner.os }}.dmg
           path: "build/bin/VGMTrans.dmg"
   x86_64-pc-linux-gnu:
     runs-on: ubuntu-20.04
