- stack the RawFile list and VGMFile list docks - add a TitleBar class used with each of the docks - improve the vertical sizing of docks at launch - increase tab bar height, and use standard tab bar widths instead of expanding on macos - remove an odd call to setBackgroundRole(QPalette::Dark) after dropping a file into the app

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -76,6 +76,8 @@ add_executable(
   widgets/MarqueeLabel.h
   widgets/TableView.cpp
   widgets/TableView.h
+  widgets/TitleBar.cpp
+  widgets/TitleBar.h
   workarea/HexView.cpp
   workarea/HexView.h
   workarea/MdiArea.cpp
