- change StatusManager to more generic NotificationCenter class - centralize vgm file selection into a NotificationCenter method and signal: selectVGMFile() / vgmFileSelected - RawFileList now connects to vgmFileSelected and updates its current item to the rawfile parent of the vgmfile

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -64,8 +64,8 @@ add_executable(
   main_ui.cpp
   services/MenuManager.cpp
   services/MenuManager.h
-  services/StatusManager.cpp
-  services/StatusManager.h
+  services/NotificationCenter.cpp
+  services/NotificationCenter.h
   services/commands/SaveCommands.h
   services/commands/GeneralCommands.h
   util/Colors.h
