Add a status bar, simplify tree view items (#456)
- add a status bar on the main window and its logic to update it in VGMFileListView, VGMFileView, VGMFileTreeView, and RawFileListView
- simplify VGMFileTreeView items to just their name for easier navigation/visualization
- improve logic for focus and item selection between VGMFileListView, VGMFileView, VGMFileTreeView, and RawFileListView
- remove redundant VGMFile `name` property and add some info in VGMFile::GetDescription()
- VGMItem::GetDescription() should now return only supplemental descriptive information about an item, and not the item name as a prefix
- Update the HexView tooltip formatting to be multiline
- Add NotificationCenter singleton class for sending signals between QWidgets indirectly

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -64,6 +64,8 @@ add_executable(
   main_ui.cpp
   services/MenuManager.cpp
   services/MenuManager.h
+  services/NotificationCenter.cpp
+  services/NotificationCenter.h
   services/commands/SaveCommands.h
   services/commands/GeneralCommands.h
   util/Colors.h
@@ -76,6 +78,8 @@ add_executable(
   widgets/MarqueeLabel.h
   widgets/SnappingSplitter.cpp
   widgets/SnappingSplitter.h
+  widgets/StatusBarContent.cpp
+  widgets/StatusBarContent.h
   widgets/TableView.cpp
   widgets/TableView.h
   widgets/TitleBar.cpp
