- add Settings service as a singleton for accessing QSettings - add a "Show Details" checkbox button to the VGMFileTreeView header. Its state persists in settings. - remove alternating row colors in VGMFileList and RawFileList

--- a/src/ui/qt/CMakeLists.txt
+++ b/src/ui/qt/CMakeLists.txt
@@ -64,6 +64,8 @@ add_executable(
   main_ui.cpp
   services/MenuManager.cpp
   services/MenuManager.h
+  services/Settings.cpp
+  services/Settings.h
   services/NotificationCenter.cpp
   services/NotificationCenter.h
   services/commands/SaveCommands.h
