add spdlog and mio libraries

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "win-deps"]
 	path = lib/vgmtrans-ext-win
 	url = ../vgmtrans-ext-win
+[submodule "lib/spdlog"]
+	path = lib/spdlog
+	url = https://github.com/gabime/spdlog.git
