--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          show-progress: false
       - name: "Install dependencies"
         run: |
           brew install -f --overwrite qt@6
@@ -49,6 +50,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+          show-progress: false
       - name: "Set environment variables"
         run: |
           echo "BRANCH=$(git rev-parse --abbrev-ref HEAD)" >> $GITHUB_ENV
@@ -118,6 +120,7 @@ jobs:
        - uses: actions/checkout@v4
          with:
           submodules: recursive
+          show-progress: false
        - uses: ilammy/msvc-dev-cmd@v1
        - name: "Prepare build"
          run: |
